--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.3.2",
+    "react-markdown": "^4.0.3",
     "react-table": "^6.8.2"
   },
   "devDependencies": {
